# RemoteControl

develop/: CMakeLists.txt  devices.csv  devices.json  main.cpp
develop/backend/include/: mainBack.h
develop/backend/source/: mainBack.cpp
develop/frontend/: addNewDev.ui  additionParameters.cpp  delete_dev.cpp  delete_dev.h  delete_dev.ui  dialog.cpp  dialog.h  dialog.ui  newdevise.cpp  newdevise.h
project/DB/: devices.txt
project/frontend/: dialog.cpp  dialog.h  menuManager.cpp  menuManager.h  newdevise.cpp
project/images/: gui_imag.qrc
